# ortus

./: .gitignore  8hidhvjki2ejjfod9rjirpcfigeu9jak.darc  AGENTS.md  CLAUDE.md  LABELS.md  Makefile  PROMPT.md  README.md  ZFC.md  activity.md  claude-4.6-ortus-report.md  clips-manifest.json  copier.yaml  install.sh  locking-fix.md  manifest  mega-ralph.sh  prompt.md  pyproject.toml  ralph.sh  sandbox-bd-pipe-todo.md  test-ralph.sh
.beads/: README.md  config.yaml  interactions.jsonl  issues.jsonl  issues.jsonl.pre-embedded-20260428-150738.bak  metadata.json  sync_base.jsonl
.claude/: settings.json
.github/workflows/: release.yml  test.yml
docs/: sunset-notes.md  testing.md
extensions/: context.py  prerequisites.py  validators.py
ortus/: bd-locked  goal.sh  human.sh  idea.sh  ralph.sh  recover-dolt.sh  tail.sh  triage.sh
ortus/lib/: backend.sh
ortus/prompts/: goal-prompt.md  idea-expand-prompt.md  interview-prompt.md  prd-decompose-prompt.md  prd-prompt.md  ralph-prompt.md
ortus/prompts/conditions/: feature-approved.txt  queue-zero.txt
prd/: PRD-codex-backend.md  PRD-goal-directive.md  PRD-ortus-global-cli.md  PRD-semble-evaluation.md
reports/: goal-vs-ralph-2026-05-16.md
scripts/: analyze-goal-logs.sh  check-ortus-parity.sh  check-structural-parity.sh  eval-cost.sh  replay-queue.sh  replay-reduce.sh  smoke-local.sh
scripts/queues/: baseline-20.txt
src/ortus/: __init__.py  __main__.py  cli.py
src/ortus/commands/: _stub.py  check.py  grind.py  human.py  init.py  interview.py  plan.py  tail.py  triage.py
src/ortus/core/: agent.py  bd.py  cache.py  claude.py  codegraph.py  config.py  git.py  grind_logic.py  grind_loop.py  hooks.py  init_render.py  output.py  profiles.py  prompts.py  readiness.py  repo.py  sandbox.py  transaction.py
src/ortus/prompts/: __init__.py  grind-prompt.md  interview-prompt.md  plan-prompt.md  triage-prompt.md
src/ortus/templates/: .gitignore.jinja  .ortusrc.jinja  AGENTS.md.jinja  __init__.py
template/: .gitignore.jinja  AGENTS.md  AGENTS.md.jinja  CLAUDE.md.jinja  PROMPT.md.jinja  README.md.jinja  activity.md  collect-qa.sh  idea.sh  interview.sh  lisa.sh  mega-ralph.sh  prompt.md.jinja  ralph.sh  tail.sh  {% if language == 'luau' %}default.project.json{% endif %}.jinja  {% if language == 'luau' and package_manager == 'wally' %}wally.toml{% endif %}.jinja  {{_copier_conf.answers_file}}.jinja
template/.beads/: .gitignore  README.md  config.yaml  metadata.json
template/.claude/: settings.json  settings.json.jinja
template/.codex/: config.toml.jinja
template/.github/workflows/: ci.yml.jinja
template/docs/: choosing-a-backend.md
template/ortus/: README.md.jinja  bd  bd-locked  goal.sh  idea.sh  interview.sh  ralph.sh  recover-dolt.sh  setup-video-beads.sh  tail.sh  triage.sh
template/ortus/lib/: backend-default.sh.jinja  backend.sh  cache.sh  sandbox.sh
template/ortus/prompts/: LABELS.md  ZFC.md  (+4 more)
template/prd/: PRD-INTERVIEW-PROMPT.md  PRD-PROMPT.md
template/prompts/: INTERVIEW-PROMPT.md  INTERVIEW-PROMPT.md.jinja  bug.md  chore.md  epic.md  feature.md  task.md
template/{% if agent_cli == 'codex' %}.codex{% endif %}/: config.toml.jinja
tests/: _platform.py  _shims.py  conftest.py  smoke-target.txt  test-bd-retry.sh  test-copier.sh  test-interview.sh  test-lisa.sh  test-prd-decompose.sh  test-ralph.sh  test-refinement.sh  test_agent_cli_question.py  test_argv_parity.py  test_audio.py  test_backend_sh.py  test_bd_preflight_sh.py  test_check.py  test_cli.py  test_cli_verbs.py  test_codegraph_codex_live.py  test_codex_config_template.py  test_codex_event_fixture.py  test_codex_tail_decoder.py  test_color_grade.py  test_content.py  test_continuity.py  test_copier_setup_task.py  test_core_agent.py  test_core_bd.py  test_core_claude.py  test_core_codegraph.py  test_core_config.py  test_core_git.py  test_core_hooks.py  test_core_output.py  test_core_prompts.py  test_core_repo.py  test_core_sandbox.py  test_e2e_pipeline.py  test_e2e_smoke.py  (+32 more)
tests/fixtures/: analyze-goal-logs-clean.jsonl  analyze-goal-logs-dirty.jsonl  argv-parity-claude.json  calculator-tasks.md  claude-stream-events.jsonl  codegraph-claude-events.jsonl  codegraph-codex-events.jsonl  codex-exec-events-failed.jsonl  codex-exec-events.jsonl  codex-tail-golden-failed.txt  codex-tail-golden.txt  eval-cost-no-evaluator.jsonl  eval-cost-sample.jsonl  prd-decompose-fixture.md  replay-sample.csv
tests/regression/: test_grind_no_stream_leak.py
video/: __main__.py  config.py  generate.py  manifest.py
video/assemble/: continuity.py  stitch.py
video/providers/: __init__.py  base.py  fal.py  kling.py  runway.py  sora.py  veo.py
video/verify/: audio.py  color_grade.py  content.py  duration.py  runner.py  shot_type.py
(+24 files in other folders)
