[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ortus"
version = "0.1.0.dev0"
description = "Global Python CLI for ortus: bd-driven Claude Code workflows"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "who", email = "githubwho@gmail.com" }]
keywords = ["claude", "beads", "bd", "cli", "ortus", "ai-coding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "jinja2>=3.1.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "portalocker>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-subprocess>=1.5.0",
    "build>=1.2.0",
]

[project.scripts]
ortus = "ortus.__main__:main"

[project.urls]
Homepage = "https://github.com/who/ortus"
Repository = "https://github.com/who/ortus"
Issues = "https://github.com/who/ortus/issues"

[tool.hatch.build.targets.sdist]
include = [
    "src/ortus",
    "README.md",
    "pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ortus"]
# hatchling skips dotfiles by default; force-include only the dot-prefixed
# leaf files (the .claude/ subtree is picked up by `packages` already since
# it contains a .jinja file, so re-listing it duplicates entries).
[tool.hatch.build.targets.wheel.force-include]
"src/ortus/templates/.ortusrc.jinja" = "ortus/templates/.ortusrc.jinja"
"src/ortus/templates/.gitignore.jinja" = "ortus/templates/.gitignore.jinja"

[tool.hatch.build.targets.sdist.force-include]
"src/ortus/templates/.ortusrc.jinja" = "src/ortus/templates/.ortusrc.jinja"
"src/ortus/templates/.gitignore.jinja" = "src/ortus/templates/.gitignore.jinja"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: tests that shell out to real external binaries (bd, claude, etc.)",
    "regression: regression tests guarding against specific past bugs (e.g., ortus-6q8v stream-leak)",
    "smoke: end-to-end smoke tests against seeded fixtures + canned claude responses",
    "slow: tests that exceed ~5s (gated behind --slow in CI; on by default locally)",
]
